fix layout issues

--- a/design/layout/class/container.css
+++ b/design/layout/class/container.css
@@ -60,11 +60,14 @@
 }
 
 .container[offset~="horizontal"] {
-  margin: 0px 8px;
+  width: calc(100%-16px);
+  margin-right: 8px;
+  margin-left: 8px;
 }
 
 .container[offset~="vertical"] {
-  margin: 8px 0px;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
 .container[offset~="all"] {
@@ -88,11 +91,13 @@
 }
 
 .container[indent~="horizontal"] {
-  padding: 0px 16px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .container[indent~="vertical"] {
-  padding: 16px 0px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .container[indent~="all"] {
